# covid

./: Cookbook.ipynb  World Bank Data.ipynb  aggregated_DB_Indicators.xlsx  aggregated_all.xlsx  cleaned_DB_Indicators.xlsx  combined_all.xlsx  country_diff.xlsx  filled_combined_all.xlsx  pyproject.toml  student_grade.csv  weight.xlsx
data/: DB_Indicators.xlsx  DB_Nutrition.xlsx  confirmed_cases.csv  death_cases.csv
