[tool.poetry]
name = "covid"
version = "0.1.0"
description = ""
authors = ["Xens Chan <xentisize@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
request = "^2019.4.13"
pandas = "^1.0.3"
matplotlib = "^3.2.1"
seaborn = "^0.10.0"
requests = "^2.23.0"
sklearn = "^0.0"
xlsxwriter = "^1.2.8"
xlrd = "^1.2.0"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
